# Campfire

./: .gitignore  .gitmodules  CMakeLists.txt  DEPENDENCIES.md  README.md  Readme.md  main.cpp
Editor/: CMakeLists.txt
Editor/Include/: EditorLayer.h
Editor/Include/Widgets/: HierarchyWidget.h  ImGuiLog.h  InspectorWidget.h  LogWidget.h  TransformWidget.h
Editor/Source/: EditorApplication.cpp  EditorLayer.cpp
Editor/Source/Widgets/: InspectorWidget.cpp
Editor/include/: EditorLayer.h  RCCpSystemTable.h  RayTracingLayer.h  VulkanLayer.h
Editor/include/Widgets/: AssetBrowser.h  ConsoleWidget.h  HierarchyWidget.h  InspectorWidget.h  LogWidget.h  TransformWidget.h
Editor/src/: EditorApplication.cpp  EditorLayer.cpp  RayTracingLayer.cpp  VulkanLayer.cpp
Editor/src/Widgets/: AssetBrowser.cpp  HierarchyWidget.cpp  InspectorWidget.cpp  LogWidget.cpp  TransformWidget.cpp
Engine/: CMakeLists.txt  EntryPoint.h  main.cpp
Engine/Audio/: CMakeLists.txt
Engine/Audio/include/Audio/: AudioClip.h  AudioSource.h  FmodImpl.h
Engine/Audio/src/: AudioSource.cpp  AudioSystem.cpp  FmodImpl.cpp
Engine/Command/: CMakeLists.txt  CommandManager.cpp
Engine/Command/include/Command/: Command.h  CommandManager.h
Engine/Command/src/: CommandManager.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/Include/Core/: Application.h  Base.h  KeyCodes.h  Layer.h  Log.h  Random.h  ResourceManager.h  Timer.h  Window.h
Engine/Core/Source/Core/: Application.cpp  FileSystem.cpp  Log.cpp  ResourceManager.cpp  Window.cpp
Engine/Core/include/Core/: Application.h  FileSystem.h  Input.h  Layer.h  Log.h  LogWidget.h  NewLog.h  ProcessorInfo.h  RCCpp.h  ResourceManager.h  Timer.h  Window.h
Engine/Core/src/Core/: Application.cpp  FileSystem.cpp  Input.cpp  Layer.cpp  Log.cpp  LogWidget.cpp  NewLog.cpp  ProcessorInfo.cpp  RCCpp.cpp  ResourceManager.cpp  Time.cpp
Engine/Events/: CMakeLists.txt
Engine/Events/Include/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Engine/Events/include/Events/: EventManager.h  LuaEvent.h  LuaManagerEvent.h
Engine/ImGui/: CMakeLists.txt
Engine/ImGui/Include/ImGui/: ImGui.h
Engine/ImGui/Source/: ImGuiLayer.cpp
Engine/ImGui/include/ImGui/: ImGuiLayer.h  ImGuiThemes.h  VulkanImGui.h  VulkanImGuiLayer.h
Engine/ImGui/src/: ImGuiLayer.cpp  VulkanImGui.cpp  VulkanImguiLayer.cpp
Engine/JobSystem/: CMakeLists.txt  InterruptibleThread.h  Job.h  JobSystem.cpp  JobSystem.h
Engine/JobSystem/include/JobSystem/: JobThreadsJoiner.h
Engine/Particles/: CMakeLists.txt
Engine/Particles/include/Particles/: ParticleSystem.h
Engine/Particles/src/: ParticleSystem.cpp
Engine/Physics/: CMakeLists.txt
Engine/Physics/include/Physics/: BulletDebugDrawer.h  Collider.h  PhysicsManager.h  Rigidbody.h  Trigger.h
Engine/Physics/src/: BulletDebugDrawer.cpp  Collider.cpp  PhysicsManager.cpp  Rigidbody.cpp  Trigger.cpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/Linux/: CMakeLists.txt  LinuxFileSystem.cpp  LinuxFileSystem.h  LinuxWindow.h
Engine/Platform/Linux/src/: LinuxFileSystem.cpp  LinuxProcessorInfo.cpp  LinuxWindow.cpp
Engine/Platform/Windows/: CMakeLists.txt
Engine/Renderer/: CMakeLists.txt
Engine/Renderer/Include/Renderer/: Mesh.h  RenderCommand.h  Renderer.h  Shader.h  Text.h  VertexArray.h
Engine/Renderer/OpenGL/: CMakeLists.txt
Engine/Renderer/Source/Renderer/: Buffer.cpp  Framebuffer.cpp  Renderer.cpp  Shader.cpp  Text.cpp  Texture.cpp
Engine/Renderer/Vulkan/: CMakeLists.txt  VulkanBuffer.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanShader.h  VulkanTexture.h
Engine/Renderer/Vulkan/src/: VulkanBuffer.cpp  VulkanComputePipeline.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanRenderer.cpp  VulkanShader.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanUtil.cpp
Engine/Renderer/include/Renderer/: Buffer.h  FrameGraph.h  Framebuffer.h  GlobalInfo.h  Material.h  Mesh.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  SceneRenderer.h  Shader.h  Shapes.h  Text.h  Texture.h
Engine/Renderer/src/Renderer/: Buffer.cpp  FrameGraph.cpp  Framebuffer.cpp  GraphicsContext.cpp  Material.cpp  (+7 more)
Engine/Scene/: CMakeLists.txt  Scene.cpp.orig
Engine/Scene/Source/: Scene.cpp  Skybox.cpp
Engine/Scene/src/: Camera.cpp  CameraController.cpp  Entity.cpp  Scene.cpp  SceneManager.cpp  ScriptableEntity.cpp  Skybox.cpp
Engine/Scripting/: CMakeLists.txt
Engine/Scripting/src/: LuaCall.cpp  LuaEvent.cpp  LuaManager.cpp  LuaScript.cpp  LuaScripting.cpp  LuaUtility.cpp  Script.cpp  ScriptEngine.cpp
Engine/Shaders/: CMakeLists.txt  line.frag  pbr.frag  sprite_default.frag
Engine/Shaders/Shaders/: generic.frag
Engine/Sources/Audio/: AudioClip.h  AudioSource.cpp
Engine/Sources/Command/: Command.h  CommandManager.h
Engine/Sources/ImGui/: ImGuiLayer.cpp
Engine/Sources/JobSystem/: InterruptibleThread.cpp  InterruptibleThread.h  JobStealingQueue.h  JobSystem.h  ThreadSafeQueue.h
Engine/Sources/Physics/: BulletDebugDrawer.h
Engine/Sources/Renderer/: GraphicsContext.cpp  Material.cpp  SceneRenderer.cpp  Texture.cpp  VertexArray.cpp
Engine/Sources/Scene/: SceneLoader.cpp
Engine/Util/: CMakeLists.txt
Engine/Util/src/: Utility.cpp
Game/: CMakeLists.txt  assimp-vc142-mtd.lib
Game/include/: Definition.inl  EntitySystem.h  Game.h  GameLayer.h  IEngine.h  IEntity.h  IEntityObject.h  IEntitySystem.h  IGame.h  IGameManager.h  IGameObject.h  IObjectUtils.h  ISystem.h  RCCpp.h  RCCppEntry.h  RCCppInterfaceID.h  RCCppSingleton.h  RCCppSystemTable.h  StdioLogSystem.h  Systems.h  TestX.h  TestY.h  TestZ.h
Game/src/: EntitySystem.cpp  Game.cpp  GameApplication.cpp  GameLayer.cpp  GameManager.cpp  GameObject.cpp  RCCpp.cpp  RCCppEntry.cpp  TestX.cpp  TestY.cpp  tri.frag  tri.vert
NightOwl/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  NightOwl.csproj  NightOwl.sln  Program.cs
VulkanApp/: CMakeLists.txt
VulkanApp/include/: VulkanLayer.h
VulkanApp/src/: VulkanApplication.cpp  VulkanLayer.cpp
(+438 files in other folders)
